Fixes #407 - headline works everywhere now.
This fix corrects an issue where the headline text on iOS devices with
narrow viewports was getting cut off. The fix has been tested on mobile
devices (iPod touch latest iOS7, Android Nexus 5) and desktop browsers.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -76,6 +76,7 @@ body.open {
   float: none;
   max-width: none;
   font-weight: 300;
+  display: initial;
 }
 
 .app-bar .logo a {
@@ -101,6 +102,7 @@ body.open {
   background-color: transparent;
   border: none;
   padding: 0;
+  display: inline-block;
   -webkit-transition: background-color 0.2s ease-out;
           transition: background-color 0.2s ease-out;
   -webkit-tap-highlight-color: transparent;
